# anland

./: README.md  README_zh.md  build_and_install.sh
.github/workflows/: build_apk.yml
android_consumer/app/src/main/jni/: CMakeLists.txt  anw_hidden.h  native_consumer.c
common/: protocol.h
consumers/anland/android_consumer/app/src/main/java/com/anland/consumer/: MainActivity.java
consumers/anland/android_consumer/app/src/main/jni/: native_consumer.c
consumers/anland_v5/android_consumer/app/src/main/java/com/anland/consumer/: ExtraKeysBar.java  MainActivity.java  SettingsActivity.java
consumers/anland_v5/android_consumer/app/src/main/jni/: native_consumer.c
consumers/anland_virtual_keyboard/android_consumer/app/src/main/: AndroidManifest.xml
consumers/anland_virtual_keyboard/android_consumer/app/src/main/java/com/anland/consumer/: MainActivity.java  VirtualKeyboardView.java
consumers/anland_virtual_keyboard/android_consumer/app/src/main/jni/: native_consumer.c
consumers/anland_virtual_keyboard/common/: protocol.h
consumers/anland_virtual_keyboard/libdisplay_consumer/: display_consumer.c  display_consumer.h
doc/History/: v1.md  v2.md
libdisplay_consumer/: display_consumer.c
libdisplay_producer/: display_producer.c  display_producer.h
producers/kde/ubuntu2604/: kwin.patch
weston/: meson_options.txt
weston/libweston/backend-virtual-drm/: meson.build
